--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "mongodb": "^4.1.1",
+    "mongoose": "^6.0.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
